--- a/cookies/index.html
+++ b/cookies/index.html
@@ -127,7 +127,7 @@
                 <h2>9. Contact Us</h2>  
                 <p>If you have any questions about our use of cookies or this policy, please contact us:</p>  
                 <ul>  
-                    <li>By email: privacy@telebothost.com</li>  
+                    <li>By email: support@telebothost.com</li>  
                     <li>Through our Telegram support:  
                         <a href="https://t.me/update_chat" target="_blank">@update_chat</a>  
                     </li>  
