--- a/privacy/index.html
+++ b/privacy/index.html
@@ -151,10 +151,10 @@
 
 <footer class="footer">
     <div class="footer-links">
-        <a href="/privacy">Privacy</a>
+        <a href="/cookies">cookies</a>
         <a href="/terms">Terms</a>
-        <a href="/cookies">Cookies</a>
-        <a href="https://t.me/TeleBotHaven">Community</a>
+        <a href="/resources">Resources</a>
+        <a href="/">Home</a>
     </div>
 </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
