--- a/privacy/index.html
+++ b/privacy/index.html
@@ -140,7 +140,7 @@
                 <h2>11. Contact Us</h2>
                 <p>If you have any questions about this Privacy Policy, please contact us:</p>
                 <ul>
-                    <li>By email: privacy@telebothost.com</li>
+                    <li>By email: support@telebothost.com</li>
 <li>Through our Telegram support:
     <a href="https://t.me/update_chat" target="_blank">@update_chat</a>
 </li>
