--- a/terms/index.html
+++ b/terms/index.html
@@ -170,7 +170,7 @@
                 <h2>14. Contact Us</h2>  
                 <p>If you have any questions about these Terms, please contact us:</p>  
                 <ul>  
-                    <li>By email: legal@telebothost.com</li>  
+                    <li>By email: support@telebothost.com</li>  
                     <li>Through our Telegram support:  
                         <a href="https://t.me/update_chat" target="_blank">@update_chat</a>  
                     </li>  
@@ -180,13 +180,13 @@
     </section>  
   
 <footer class="footer">
-    <div class="footer-links">
-        <a href="/privacy">Privacy</a>
-        <a href="/terms">Terms</a>
-        <a href="/cookies">Cookies</a>
-        <a href="https://t.me/TeleBotHaven">Community</a>
-    </div>
+  <div class="footer-links">
+    <a href="/privacy">Privacy</a>
+    <a href="/cookies">Cookies</a>
+    <a href="/resources">Resources</a>
+  </div>
 </footer>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>  
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>  
     <script src="/assets/script.js" type="text/javascript" charset="utf-8" defer></script>  
