--- a/bugs/index.html
+++ b/bugs/index.html
@@ -6,6 +6,8 @@
   <title>TeleBot Host - Report a Bug</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2719295794573158"
+     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/assets/style.css" type="text/css" media="all" />
   <style>
 
