--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 
                 <div class="hero-buttons">
                     <a href="https://console.telebothost.com/register" class="btn btn-primary">Get Started</a>
-                    <a herf="/docs" class="btn btn-outline" >Documentation</a>
+                    <a href="/docs" class="btn btn-outline" >Documentation</a>
                 </div>
             </div>
             
