--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="https://telebothost.com/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="https://telebothost.com/favicon-16x16.png">
   <link rel="manifest" href="https://telebothost.com/site.webmanifest">
-  <meta name="msapplication-TileColor" content="#2563EB">
+  <meta name="msapplication-TileColor" content="#ffffff">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2719295794573158" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js" defer></script>
