--- a/resources/index.html
+++ b/resources/index.html
@@ -105,18 +105,46 @@
   </header>  
 
   <section class="resources">  
-    <h2 class="section-title">FAQs & Resources</h2>  
-    <p class="section-subtitle">Find answers to common questions and useful resources.</p>  
-    
-    <div id="faqs" class="resource-section">  
-      <h3 class="section-title-link">Frequently Asked Questions <i class="fas fa-link copy-link" onclick="copySectionLink('faqs')"></i></h3>  
-      <ul class="faq-list">  
-        <li><strong>Q: How do I deploy a bot?</strong><p>A: Use the "One-Click Setup" after sign-up. No server setup required. Just use our pre buiit bots from community store to get ready with your bot .</p></li>  
-        <li><strong>Q: Is TeleBot Host free?</strong><p>A: Yes! We provide a free tier with generous limits. No credit card needed.</p></li>  
-        <li><strong>Q: Can I use my own domain?</strong><p>A: No, custom domain not supported.</p></li>  
-        <li><strong>Q: Do you provide 24/7 support?</strong><p>A: Yes, via Telegram groups and our support page anytime.</p></li>  
-      </ul>  
-    </div>  
+<h2 class="section-title">FAQs & Resources</h2>
+<p class="section-subtitle">Find answers to common questions and useful resources.</p>
+
+<div id="faqs" class="resource-section">
+  <h3 class="section-title-link">Frequently Asked Questions <i class="fas fa-link copy-link" onclick="copySectionLink('faqs')"></i></h3>
+  <ul class="faq-list">
+    <li>
+      <strong>Q: How do I deploy a Telegram bot on TBH?</strong>
+      <p>A: Sign up and upload your own bot files or choose a template from the community store. No coding or server setup is needed.</p>
+    </li>
+    <li>
+      <strong>Q: Does TBH provide free hosting?</strong>
+      <p>A: Yes, we offer a **free plan** to get started. Paid plans are available for higher uptime and more resources.</p>
+    </li>
+    <li>
+      <strong>Q: Can I connect my bot to a custom domain?</strong>
+      <p>A: At the moment, **custom domains are not supported**. You’ll get a secure TBH subdomain for your bot’s API endpoint.</p>
+    </li>
+    <li>
+      <strong>Q: Can I upload my own code or just use templates?</strong>
+      <p>A: Both options are available. You can deploy **ready-made bots** from the store or upload your **custom scripts** via the file manager or GitHub integration.</p>
+    </li>
+    <li>
+      <strong>Q: Does TBH provide database support?</strong>
+      <p>A: Yes, TBH includes a built-in database for user data, logs, and session management. External databases (like MongoDB or Firebase) can also be connected.</p>
+    </li>
+    <li>
+      <strong>Q: Is my bot online 24/7?</strong>
+      <p>A: Absolutely. All bots hosted on TBH run on **cloud servers** and stay live 24/7 as long as your plan supports it.</p>
+    </li>
+    <li>
+      <strong>Q: Where can I get help if I’m stuck?</strong>
+      <p>A: Join our <a href="https://t.me/TeleBotHostSupport">Telegram Support Group</a> or visit the <a href="/docs">Documentation</a> for detailed guides and examples.</p>
+    </li>
+    <li>
+      <strong>Q: Can I monetize my bot on TBH?</strong>
+      <p>A: Yes, you can integrate **payment gateways, ads, or premium features** within your bot. TBH does not take a commission.</p>
+    </li>
+  </ul>
+</div>
     <div id="legal" class="resource-section">  
       <h3 class="section-title-link">Legal Information <i class="fas fa-link copy-link" onclick="copySectionLink('legal')"></i></h3>  
       <ul class="link-list">  
@@ -131,6 +159,7 @@
         <li><a href="/docs">Documentation</a></li>  
         <li><a href="https://t.me/TeleBotHaven">Community Telegram Channel</a></li>  
         <li><a href="https://t.me/update_chat">Community Telegram Group</a></li>
+        <li><a href="https://github.com/telebothost/">GitHub</a></li>
          <li><a href="/changelog">Changelog</a></li>  
         <li><a href="/bugs">Report Bugs</a></li> 
       </ul>  
