--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Fast Telegram Bot Hosting | Secure & Scalable | TeleBotHost">
   <meta name="twitter:description" content="🚀 TeleBotHost offers the fastest, most secure Telegram bot hosting with 99.9% uptime. Deploy & manage bots instantly with 1-click setup.">
-  <meta name="twitter:image" content="https://telebothost.com/assets/telegram-bot-hosting-preview.jpg">
+  <meta name="twitter:image" content="https://telebothost.com/assets/preview.png">
   <meta name="twitter:image:alt" content="Telegram Bot Hosting Dashboard - TeleBotHost">
   <meta name="twitter:site" content="@TeleBotHost">
   <meta name="twitter:creator" content="@TeleBotHost">
