--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 
     <title>TeleBot Host - Free Telegram Bot Hosting</title>
       <meta name="description" content="🚀 TeleBotHost offers the fastest, most secure Telegram bot hosting with 99.9% uptime. Deploy & manage bots instantly with 1-click setup. With full free Hosting ">
-  <meta name="keywords" content="Telegram bot hosting, Telegram bot server, best bot hosting, cheap Telegram hosting, scalable bot servers, fast bot hosting, 24/7 bot support, automated Telegram bots, Tele-Bot-Host, free Telegram bot hosting, telegram, bots, tele bot host, telegram bot host, best bot hosting, top 10 bot hostings, top bots, Telegram view bot, TelebotCreator, AWS Lambda, Oracle Cloud, Pythonanywhere, Hostarmada, free bot hosting, affordable bot hosting, reliable bot servers, bot hosting for beginners, scalable Telegram hosting, high-performance bot hosting, cloud bot hosting, serverless bot hosting, Python bot hosting, Telegram bot deployment, bot hosting platforms, top Telegram bot hosting 2025, free tier bot hosting, Telegram bot automation, bot server management, Telegram bot development, Telegram bot hosting reviews, best hosting for Telegram bots, cheap bot servers, fast Telegram bot hosting, Teleservice, Tele Bot Host, Teleservice Bot host, BB, TelebotHost, TeleBotHaven">
-  <meta name="author" content="Tele-Bot-Host Team">
+  <meta name="keywords" content="Telegram bot hosting, Telegram bot server, best bot hosting, cheap Telegram hosting, scalable bot servers, fast bot hosting, 24/7 bot support, automated Telegram bots, Tele-Bot-Host, free Telegram bot hosting, telegram, bots, tele bot host, telegram bot host, best bot hosting, top 10 bot hostings, top bots, Telegram view bot, TelebotCreator, AWS Lambda, Oracle Cloud, Pythonanywhere, Hostarmada, free bot hosting, affordable bot hosting, reliable bot servers, bot hosting for beginners, scalable Telegram hosting, high-performance bot hosting, cloud bot hosting, serverless bot hosting, Python bot hosting, Telegram bot deployment, bot hosting platforms, top Telegram bot hosting 2025, free tier bot hosting, Telegram bot automation, bot server management, Telegram bot development, Telegram bot hosting reviews, best hosting for Telegram bots, cheap bot servers, fast Telegram bot hosting, Teleservice, Tele Bot Host, Teleservice Bot host, TelebotHost, TeleBotHaven">
+  <meta name="author" content="TeleBotHost Team">
   <meta name="robots" content="index, follow, max-image-preview:large">
     <link rel="canonical" href="https://telebothost.com/">
   <link rel="alternate" hreflang="x-default" href="https://telebothost.com/">
   <!-- Open Graph / Social Meta (Facebook, LinkedIn) -->
   <meta property="og:title" content="Fast Telegram Bot Hosting | Secure & Scalable | TeleBotHost">
   <meta property="og:description" content="🚀 TeleBotHost offers the fastest, most secure Telegram bot hosting with 99.9% uptime. Deploy & manage bots instantly with 1-click setup.">
-  <meta property="og:image" content="https://telebothost.com/assets/telegram-bot-hosting-preview.jpg">
+  <meta property="og:image" content="https://telebothost.com/assets/preview.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:image:alt" content="Telegram Bot Hosting Dashboard - TeleBotHost">
@@ -37,11 +37,9 @@
   <meta name="twitter:description" content="🚀 TeleBotHost offers the fastest, most secure Telegram bot hosting with 99.9% uptime. Deploy & manage bots instantly with 1-click setup.">
   <meta name="twitter:image" content="https://telebothost.com/assets/preview.png">
   <meta name="twitter:image:alt" content="Telegram Bot Hosting Dashboard - TeleBotHost">
-  <meta name="twitter:site" content="@TeleBotHost">
-  <meta name="twitter:creator" content="@TeleBotHost">
 
   <!-- Telegram Channel -->
-  <meta name="telegram:channel" content="@TeleBotHost">
+  <meta name="telegram:channel" content="@TeleBotHaven">
 
   <!-- Favicon & App Icons -->
   <link rel="icon" href="https://telebothost.com/favicon.ico" type="image/x-icon">
