--- a/404.html
+++ b/404.html
@@ -1,96 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>404 - Page Not Found | TeleBot Host</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-<!-- Lottie Player CDN -->
-<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-<style>
- * {
-       margin: 0;
-       padding: 0;
-       box-sizing: border-box;
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- SEO Meta Tags -->
+  <title>404 - Page Not Found | TeleBot Host</title>
+  <meta name="description" content="Oops! The page you are looking for on TeleBot Host doesn't exist. Return to the homepage for more content.">
+  <meta name="keywords" content="404, page not found, TeleBot Host, error, missing page">
+  <meta name="author" content="TeleBot Host">
+  <meta name="robots" content="noindex, follow">
+
+  <!-- Open Graph / Social Media Meta -->
+  <meta property="og:title" content="404 - Page Not Found | TeleBot Host">
+  <meta property="og:description" content="Oops! The page you are looking for doesn't exist. Return to the homepage safely.">
+  <meta property="og:type" content="website">
+  
+  <!-- Twitter Meta -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="404 - Page Not Found | TeleBot Host">
+  <meta name="twitter:description" content="Oops! The page you are looking for doesn't exist. Return to the homepage safely.">
+
+  <!-- Fonts & Icons -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+  <!-- Lottie Player CDN -->
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
       -webkit-tap-highlight-color: transparent;
       -webkit-touch-callout: none;
-   }
-  html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    overflow: hidden;
-    font-family: 'Inter', sans-serif;
-    background-color: #f5f7fa;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    text-align: center;
-    padding: 10px 20px; /* adjusted padding */
-    box-sizing: border-box;
-  }
-
-  lottie-player {
-    height: 30vh;
-    width: 30vh;
-  }
-
-  h2 {
-    font-size: 1.8rem;   /* slightly smaller for better balance */
-    margin: 0.5rem 0 1rem;
-    color: #1e1e2f;
-    font-weight: 600;
-  }
-
-  p {
-    font-size: 1.1rem;
-    max-width: 350px;
-    margin: 0 auto 1.5rem; /* reduced bottom margin */
-    color: #555;
-    line-height: 1.5;
-  }
-
-  a.button {
-    display: inline-block;
-    padding: 12px 30px; /* adjusted padding */
-    background: #0088cc;
-    color: #fff;
-    font-weight: 600;
-    border-radius: 25px; /* slightly smaller */
-    text-decoration: none;
-    transition: 0.3s;
-  }
-
-  a.button:hover {
-    background: #00aaff;
-  }
-
-  @media (max-width: 600px) {
-    h2 { font-size: 1.4rem; }
-    p { font-size: 0.95rem; max-width: 280px; }
-    a.button { padding: 10px 22px; font-size: 0.9rem; }
-    lottie-player { width: 45vmin; max-width: 220px; min-width: 150px; margin-bottom: 1rem; }
-  }
-</style>
+    }
+    html, body {
+      height: 100%;
+      font-family: 'Inter', sans-serif;
+      background-color: #f5f7fa;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+    }
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      padding: 10px 20px;
+    }
+    lottie-player {
+      width: 35vmin;
+      max-width: 250px;
+      min-width: 150px;
+      height: auto;
+      margin-bottom: 1rem;
+    }
+    h2 {
+      font-size: 2rem;
+      color: #1e1e2f;
+      font-weight: 600;
+      margin-bottom: 0.5rem;
+    }
+    p {
+      font-size: 1.1rem;
+      max-width: 360px;
+      color: #555;
+      line-height: 1.5;
+      margin-bottom: 1.5rem;
+    }
+    a.button {
+      display: inline-block;
+      padding: 12px 30px;
+      background: #0088cc;
+      color: #fff;
+      font-weight: 600;
+      border-radius: 25px;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+    a.button:hover {
+      background: #00aaff;
+    }
+    @media (max-width: 600px) {
+      h2 { font-size: 1.5rem; }
+      p { font-size: 1rem; max-width: 280px; }
+      a.button { padding: 10px 22px; font-size: 0.9rem; }
+      lottie-player { width: 45vmin; max-width: 220px; min-width: 150px; }
+    }
+  </style>
 </head>
 <body>
 
 <div class="container">
-  <!-- Lottie Player -->
-  <lottie-player 
-    src="animations/404.json" 
-    background="transparent" 
-    speed="1" 
-    loop 
+  <!-- Lottie Animation -->
+  <lottie-player
+    src="animations/404.json"
+    background="transparent"
+    speed="1"
+    loop
     autoplay>
   </lottie-player>
 
