--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!-- 
+  This website is developed by Soumyadeep Das
+  Author GitHub: https://github.com/Soumyadeep765/
+
+  All codes are fully open-source and available in our repository:
+  Repo: https://github.com/telebothost/landing-page/
+
+  Note: Feel free to explore, contribute, or reuse the code under open-source terms.
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -237,5 +246,9 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script src="assets/script.js" type="text/javascript" charset="utf-8" defer></script>
+    
+ <script type="text/javascript" charset="utf-8">
+ console.log('Check out our repo: https://github.com/telebothost/landing-page/');
+   </script>
 </body>
 </html>
