--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- 
   This website is developed by Soumyadeep Das
-  Author GitHub: https://github.com/Soumyadeep765/
+  GitHub: https://github.com/Soumyadeep765/
 
   All codes are fully open-source and available in our repository:
   Repo: https://github.com/telebothost/landing-page/
