--- a/changelog/index.html
+++ b/changelog/index.html
@@ -40,10 +40,12 @@
   <section>
     <h2>Changelog</h2>
     <p class="subtitle">See what's new and updated on TeleBot Host platform.</p>
+<!-- v1.0.1 comming with some bug fixes--> 
 
-<!-- Official Release -->
+
+<!-- Official first Release with v1.0.0 -->
 <div id="v1-0-0" class="update-section">
-  <span class="update-date">September 15, 2025</span>
+  <span class="update-date">September 17, 2025</span>
   <h3>
     Version 1.0.0
     <i class="fas fa-link copy-link" onclick="copySectionLink('v1-0-0')"></i>
@@ -54,6 +56,8 @@
     <li>Multi-bot management feature</li>
     <li>Improved API response speed by 40%</li>
     <li>Security enhancements and stability improvements</li>
+    <li>Fixed bugs in TBL language</li>
+    <li>Addded official libraries</li>
   </ul>
 </div>
 
