--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -37,9 +37,9 @@
     <p class="subtitle">Step-by-step guides to learn JavaScript basics and TBL bot development.</p>
 
     <div class="tutorial-card">
-      <h3>1. JavaScript Basics for TBL Bots</h3>
-      <p>Learn the core JavaScript concepts you’ll need when writing TBL bots.</p>
-      <a href="/tutorials/js-basics.html">Read Tutorial →</a>
+      <h3>1. Adding your first bot to TeleBotHost</h3>
+      <p>Learn how to create and lunch your first working bot.</p>
+      <a href="/tutorials/adding-first-bot.html">Read Tutorial</a>
     </div>
 <!-- 
     <div class="tutorial-card">
