--- a/tutorials/adding-first-bot.html
+++ b/tutorials/adding-first-bot.html
@@ -6,6 +6,7 @@
   <title>Adding Your First Bot | TeleBot Host</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2719295794573158" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/assets/style.css" />
   <style>
     section { padding:80px 20px; max-width:950px; margin:auto; line-height:1.7; }
