--- a/resources/index.html
+++ b/resources/index.html
@@ -108,7 +108,28 @@
 <h2 class="section-title">FAQs & Resources</h2>
 <p class="section-subtitle">Find answers to common questions and useful resources.</p>
 
-<div id="faqs" class="resource-section">
+
+    <div id="legal" class="resource-section">  
+      <h3 class="section-title-link">Legal Information <i class="fas fa-link copy-link" onclick="copySectionLink('legal')"></i></h3>  
+      <ul class="link-list">  
+        <li><a href="/privacy">Privacy Policy</a></li>  
+        <li><a href="/terms">Terms of Service</a></li>  
+        <li><a href="/cookies">Cookie Policy</a></li>  
+      </ul>  
+    </div>  
+    <div id="important-links" class="resource-section">  
+      <h3 class="section-title-link">Important Links <i class="fas fa-link copy-link" onclick="copySectionLink('important-links')"></i></h3>  
+      <ul class="link-list">  
+        <li><a href="/docs">Documentation</a></li>  
+        <li><a href="https://t.me/TeleBotHaven">Community Telegram Channel</a></li>  
+        <li><a href="https://t.me/update_chat">Community Telegram Group</a></li>
+        <li><a href="https://github.com/telebothost/">GitHub</a></li>
+         <li><a href="/changelog">Changelog</a></li>  
+        <li><a href="/bugs">Report Bugs</a></li>
+        <li><a href="/tutorials">Tutorials</a></li>
+      </ul>  
+    </div>
+    <div id="faqs" class="resource-section">
   <h3 class="section-title-link">Frequently Asked Questions <i class="fas fa-link copy-link" onclick="copySectionLink('faqs')"></i></h3>
   <ul class="faq-list">
     <li>
@@ -145,25 +166,6 @@
     </li>
   </ul>
 </div>
-    <div id="legal" class="resource-section">  
-      <h3 class="section-title-link">Legal Information <i class="fas fa-link copy-link" onclick="copySectionLink('legal')"></i></h3>  
-      <ul class="link-list">  
-        <li><a href="/privacy">Privacy Policy</a></li>  
-        <li><a href="/terms">Terms of Service</a></li>  
-        <li><a href="/cookies">Cookie Policy</a></li>  
-      </ul>  
-    </div>  
-    <div id="important-links" class="resource-section">  
-      <h3 class="section-title-link">Important Links <i class="fas fa-link copy-link" onclick="copySectionLink('important-links')"></i></h3>  
-      <ul class="link-list">  
-        <li><a href="/docs">Documentation</a></li>  
-        <li><a href="https://t.me/TeleBotHaven">Community Telegram Channel</a></li>  
-        <li><a href="https://t.me/update_chat">Community Telegram Group</a></li>
-        <li><a href="https://github.com/telebothost/">GitHub</a></li>
-         <li><a href="/changelog">Changelog</a></li>  
-        <li><a href="/bugs">Report Bugs</a></li> 
-      </ul>  
-    </div>  
   </section>  
 
 <footer class="footer">
