--- a/tutorials/adding-first-bot.html
+++ b/tutorials/adding-first-bot.html
@@ -30,8 +30,8 @@
   border: 1px solid #eee;
   display: block;         /* makes margin:auto work for centering */
 }
-    a { color:#0088cc; text-decoration:none; }
-    a:hover { text-decoration:underline; }
+    a { color:#0088cc; text-decoration:none; font-weight: bold;}
+
   </style>
 </head>
 <body>
