--- a/resources/index.html
+++ b/resources/index.html
@@ -134,27 +134,25 @@
   <ul class="faq-list">
     <li>
       <strong>Q: How do I deploy a Telegram bot on TBH?</strong>
-      <p>A: Sign up and upload your own bot files or choose a template from the community store. No coding or server setup is needed.</p>
+      <p>A: Sign up and made your own bot codes or choose a template from the community store. No server setup is needed.</p>
     </li>
     <li>
       <strong>Q: Does TBH provide free hosting?</strong>
-      <p>A: Yes, we offer a **free plan** to get started. Paid plans are available for higher uptime and more resources.</p>
+      <p>A: Yes, we offer a <b>free plan</b> to get started. Paid plans are available for higher uptime and more resources. Premium plan's will come soon.</p>
     </li>
-    <li>
-      <strong>Q: Can I connect my bot to a custom domain?</strong>
-      <p>A: At the moment, **custom domains are not supported**. You’ll get a secure TBH subdomain for your bot’s API endpoint.</p>
-    </li>
+
+
     <li>
       <strong>Q: Can I upload my own code or just use templates?</strong>
-      <p>A: Both options are available. You can deploy **ready-made bots** from the store or upload your **custom scripts** via the file manager or GitHub integration.</p>
+      <p>A: Both options are available. You can deploy <b>ready-made bots</b> from the store or made your own codes for your bot as your needs..</p>
     </li>
     <li>
       <strong>Q: Does TBH provide database support?</strong>
-      <p>A: Yes, TBH includes a built-in database for user data, logs, and session management. External databases (like MongoDB or Firebase) can also be connected.</p>
+      <p>A: Yes, TBH includes a built-in database for user data, logs, and session management. But don't support custom db integration.</p>
     </li>
     <li>
       <strong>Q: Is my bot online 24/7?</strong>
-      <p>A: Absolutely. All bots hosted on TBH run on **cloud servers** and stay live 24/7 as long as your plan supports it.</p>
+      <p>A: Absolutely. All bots hosted on TBH run on <b>cloud serversand</b> stay live 24/7 as long as your plan supports it.</p>
     </li>
     <li>
       <strong>Q: Where can I get help if I’m stuck?</strong>
@@ -162,7 +160,7 @@
     </li>
     <li>
       <strong>Q: Can I monetize my bot on TBH?</strong>
-      <p>A: Yes, you can integrate **payment gateways, ads, or premium features** within your bot. TBH does not take a commission.</p>
+      <p>A: Yes, you can integrate <b>payment gateways</b>, ads, or <b>premium features</b> within your bot. TBH does not take a commission.</p>
     </li>
   </ul>
 </div>
