--- a/tutorials/adding-first-bot.html
+++ b/tutorials/adding-first-bot.html
@@ -4,6 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Adding Your First Bot | TeleBot Host</title>
+  <!-- Primary Meta Tags -->
+<meta name="title" content="Adding Your First Bot | TeleBot Host">
+<meta name="description" content="Learn how to create and launch your first Telegram bot with TeleBot Host. Step-by-step guide covering setup, adding tokens, commands, and testing your bot.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://telebothost.com/tutorials/adding-first-bot">
+<meta property="og:title" content="Adding Your First Bot | TeleBot Host">
+<meta property="og:description" content="Step-by-step tutorial to add your first Telegram bot using TeleBot Host. Learn to manage commands, launch your bot, and explore advanced features.">
+<meta property="og:image" content="https://telebothost.com/assets/img/step1.jpg">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://telebothost.com/tutorials/adding-first-bot">
+<meta property="twitter:title" content="Adding Your First Bot | TeleBot Host">
+<meta property="twitter:description" content="Complete guide to create and run your first Telegram bot with TeleBot Host. Learn setup, add tokens, commands, and test your bot.">
+<meta property="twitter:image" content="https://telebothost.com/assets/img/step1.jpg">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2719295794573158" crossorigin="anonymous"></script>
