--- a/tutorials/adding-first-bot.html
+++ b/tutorials/adding-first-bot.html
@@ -131,15 +131,15 @@
 
   <p class="subtitle"><i class="fas fa-book"></i> Visit <a href="/docs">/docs</a> to unlock the full potential of your bots!</p>
   
-<!--
+
 <div style="display:flex; justify-content:center; margin:50px auto; max-width:900px;">
-  <a href="/tutorials/managing-with-codes" 
+  <a href="/tutorials/setup-bot-code" 
      style="padding:10px 22px; border:2px dotted #888; border-radius:8px; background:transparent; color:#0088cc; text-decoration:none; text-align:center; transition:all 0.2s; line-height:1.2;">
      
      <div style="font-size:16px; font-weight:bold;">Next </div>
      <div style="font-size:12px; color:#666;">Managing your bot with Codes</div>
   </a>
-</div>  -->
+</div>
 </section>
 
 <footer class="footer">
