--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -41,13 +41,13 @@
       <p>Learn how to create and lunch your first working bot.</p>
       <a href="/tutorials/adding-first-bot.html">Read Tutorial</a>
     </div>
-<!-- 
-    <div class="tutorial-card">
-      <h3>2. Working with Api.xxx</h3>
-      <p>Understand how the <code>Api</code> component works in TBL to interact with Telegram Bot API.</p>
-      <a href="/tutorials/api.html">Read Tutorial →</a>
-    </div>
 
+    <div class="tutorial-card">
+      <h3>2. Setting Up Your Bot with TBL Codes</h3>
+      <p>Understand how the <code>Api</code> component works in TBL to interact with Telegram Bot API.</p>
+      <a href="/tutorials/adding-first-bot.html">Read Tutorial →</a>
+    </div>
+<!--
     <div class="tutorial-card">
       <h3>3. Mastering the Bot Object</h3>
       <p>Learn how to use <code>Bot</code> methods for messaging, properties, and keyboards.</p>
