--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -4,6 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>TeleBot Host - Tutorials</title>
+  <meta name="description" content="Step-by-step tutorials for creating Telegram bots with TeleBot Host. Learn to add bots, code with TBL, and master bot features.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://telebothost.com/tutorials/">
+  <meta property="og:title" content="TeleBot Host - Tutorials">
+  <meta property="og:description" content="Step-by-step guides to create and code Telegram bots using TeleBot Host and TBL. Learn commands, bot setup, and coding techniques.">
+  <meta property="og:image" content="https://telebothost.com/assets/images/tutorials.jpg">
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2719295794573158" crossorigin="anonymous"></script>
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://telebothost.com/tutorials/">
+  <meta property="twitter:title" content="TeleBot Host - Tutorials">
+  <meta property="twitter:description" content="Step-by-step guides to create and code Telegram bots using TeleBot Host and TBL. Learn commands, bot setup, and coding techniques.">
+  <meta property="twitter:image" content="https://telebothost.com/assets/images/tutorials.jpg">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/style.css" />
@@ -34,32 +50,21 @@
 
   <section>
     <h2>Tutorials</h2>
-    <p class="subtitle">Step-by-step guides to learn JavaScript basics and TBL bot development.</p>
+    <p class="subtitle">Step-by-step guides to create and code Telegram bots using TeleBot Host and TBL.</p>
 
     <div class="tutorial-card">
-      <h3>1. Adding your first bot to TeleBotHost</h3>
-      <p>Learn how to create and lunch your first working bot.</p>
-      <a href="/tutorials/adding-first-bot.html">Read Tutorial</a>
+      <h3>1. Adding Your First Bot to TeleBot Host</h3>
+      <p>Learn how to create your first Telegram bot, get its token, add it to TeleBot Host, and start it successfully.</p>
+      <a href="/tutorials/adding-first-bot.html">Read Tutorial →</a>
     </div>
 
     <div class="tutorial-card">
       <h3>2. Setting Up Your Bot with TBL Codes</h3>
-      <p>Understand how the <code>Api</code> component works in TBL to interact with Telegram Bot API.</p>
-      <a href="/tutorials/adding-first-bot.html">Read Tutorial →</a>
-    </div>
-<!--
-    <div class="tutorial-card">
-      <h3>3. Mastering the Bot Object</h3>
-      <p>Learn how to use <code>Bot</code> methods for messaging, properties, and keyboards.</p>
-      <a href="/tutorials/bot.html">Read Tutorial →</a>
+      <p>Learn how to write your first TBL (Tele Bot Lang) code for your bot, add commands, and test messages directly in Telegram.</p>
+      <a href="/tutorials/setup-bot-tbl.html">Read Tutorial →</a>
     </div>
 
-    <div class="tutorial-card">
-      <h3>4. Using Async/Await in TBL</h3>
-      <p>Learn asynchronous coding with <code>async/await</code> inside TBL commands.</p>
-      <a href="/tutorials/async-await.html">Read Tutorial →</a>
-    </div>
-    -->
+    <!-- Additional tutorial cards can be added here -->
   </section>
 
   <footer class="footer">
