--- a/404.html
+++ b/404.html
@@ -95,7 +95,7 @@
 <div class="container">
   <!-- Lottie Animation -->
   <lottie-player
-    src="animations/404.json"
+    src="/animations/404.json"
     background="transparent"
     speed="1"
     loop
