--- a/contact/index.html
+++ b/contact/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/style.css" type="text/css" media="all" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2719295794573158" crossorigin="anonymous"></script>
   <style>
     section { padding:100px 20px 50px; max-width:900px; margin:auto; }
     h2 { font-size:1.8rem; color:#0088cc; text-align:center; margin-bottom:10px; }
@@ -44,6 +45,15 @@
        <p>Our support team is always available to assist with bot hosting issues, API guidance, or general platform inquiries. Expect a fast response at any time, day or night.</p>
      </div>
    </div>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-fb+5w+4e-db+86"
+     data-ad-client="ca-pub-2719295794573158"
+     data-ad-slot="8786409519"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
    <div class="contact-section">
      <h3>Telegram Support</h3>
