--- a/resources/index.html
+++ b/resources/index.html
@@ -129,6 +129,16 @@
         <li><a href="/tutorials">Tutorials</a></li>
       </ul>  
     </div>
+    <ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-2719295794573158"
+     data-ad-slot="8142878854"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
     <div id="faqs" class="resource-section">
   <h3 class="section-title-link">Frequently Asked Questions <i class="fas fa-link copy-link" onclick="copySectionLink('faqs')"></i></h3>
   <ul class="faq-list">
