--- a/tutorials/adding-first-bot.html
+++ b/tutorials/adding-first-bot.html
@@ -79,6 +79,15 @@
   <h3>Step 3: Login or Signup</h3>
   <p>Login with your credentials or create a new account if you don’t have one. After logging in, you will see your dashboard.</p>
   <img src="/assets/img/step3.jpg" alt="User Dashboard" class="img-step">
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-fb+5w+4e-db+86"
+     data-ad-client="ca-pub-2719295794573158"
+     data-ad-slot="8786409519"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
   <h3>Step 4: Add a New Bot</h3>
   <p>On the dashboard, locate the <b>Add Bot</b> button or the <b>+ icon</b> and click it. A modal will appear asking for your bot token.</p>
@@ -115,6 +124,15 @@
     <li>Click <b>Save</b> to finalize.</li>
   </ul>
   <img src="/assets/img/step9.jpg" alt="Add Command Panel" class="img-step">
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-fb+5w+4e-db+86"
+     data-ad-client="ca-pub-2719295794573158"
+     data-ad-slot="8786409519"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
   <h3>Step 10: Test Your Bot</h3>
   <p>Go to Telegram, open your bot, and send <code>/start</code>. Your bot will reply with the message you set, e.g., <i>"Hi from bot"</i>.</p>
@@ -140,6 +158,16 @@
      <div style="font-size:12px; color:#666;">Managing your bot with Codes</div>
   </a>
 </div>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-fb+5w+4e-db+86"
+     data-ad-client="ca-pub-2719295794573158"
+     data-ad-slot="8786409519"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 </section>
 
 <footer class="footer">
