--- a/tutorials/setup-bot-code.html
+++ b/tutorials/setup-bot-code.html
@@ -79,6 +79,15 @@
     <li>Supports both synchronous (80%) and asynchronous (20%) execution with <code>await</code> and <code>Promise</code></li>
     <li>Responds to specific command triggers rather than general events</li>
   </ul>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-fb+5w+4e-db+86"
+     data-ad-client="ca-pub-2719295794573158"
+     data-ad-slot="8786409519"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
   <h3>Step 1: Access Your Bot</h3>
   <p>Ensure your bot is already added to TeleBot Host. Go to the <b>Bot List</b> and click on your bot's name to open its management panel.</p>
@@ -96,6 +105,15 @@
   <p>Type the following simple code in the editor to send a message:</p>
   <pre><code>Bot.sendMessage("Hello! This message is from Bot codes");</code></pre>
   <img src="/assets/img/step4-code.jpg" alt="Add TBL Code" class="img-step">
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-2719295794573158"
+     data-ad-slot="8142878854"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
   <h3>Step 5: Save Your Code</h3>
   <p>Click the <b>Save</b> button at the bottom to store your changes.</p>
@@ -113,6 +131,15 @@
      <div style="font-size:12px; color:#666;">Adding your first bot</div>
   </a>
 </div>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-fb+5w+4e-db+86"
+     data-ad-client="ca-pub-2719295794573158"
+     data-ad-slot="8786409519"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 
 </section>
