--- a/changelog/index.html
+++ b/changelog/index.html
@@ -58,7 +58,15 @@
     <li>Addded official libraries</li>
   </ul>
 </div>
-
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-2719295794573158"
+     data-ad-slot="8142878854"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <!-- v0.0.2 Update -->
 <div id="v0-0-2" class="update-section">
   <span class="update-date">August 10, 2025</span>
@@ -91,7 +99,15 @@
 
 <!-- we will add more next on upcomming versions -->
   </section>
-
+  
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+p158"
+     data-ad-slot="8529358835"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <footer class="footer">
   <div class="footer-links">
