--- a/index.html
+++ b/index.html
@@ -232,6 +232,15 @@
             </div>
         </div>
     </section>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-2719295794573158"
+     data-ad-slot="8142878854"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <footer class="footer">
   <div class="footer-links">
