--- a/404.html
+++ b/404.html
@@ -6,7 +6,10 @@
   
   <title>404 - Page Not Found | TeleBot Host</title>
   <meta name="description" content="Oops! The page you are looking for on TeleBot Host doesn't exist. Return to the homepage for more content.">
-  <meta name="keywords" content="404, page not found, TeleBot Host, error, missing page">
+<meta name="keywords" content="
+Telegram bot hosting, free Telegram bot hosting, best Telegram bot hosting, secure Telegram bot server, scalable bot hosting, fast Telegram bot hosting, 24/7 Telegram bot uptime, automated Telegram bots, TeleBotHost, Tele-Bot-Host, TeleBotHaven, TelebotCreator, online Telegram bot hosting, Telegram bot deployment, cloud bot hosting, serverless Telegram bot hosting, PythonAnywhere Telegram bots, AWS Lambda Telegram bots, Oracle Cloud Telegram bots, HostArmada Telegram bot hosting, high-performance bot hosting, Telegram bot management, reliable bot servers, affordable Telegram bot hosting, top Telegram bot hosting 2025, free tier bot hosting, Telegram bot automation, Telegram bot server cost, Telegram bot hosting comparison, Telegram bot hosting tutorial, Telegram bot hosting guide, Telegram bot hosting platform review, host Telegram bots instantly, Telegram bot hosting solutions, Telegram bot hosting providers, Telegram bot hosting features, Telegram bot hosting for beginners, Telegram bot hosting experts, Telegram bot server performance, best free Telegram bot host, Telegram bot hosting tips, Telegram bot development, Telegram bot hosting reviews, Telegram bot cloud hosting, Telegram bot hosting fast server, Telegram bot hosting online, top free Telegram bot hosting, Telegram bot automation tools, Telegram bot platform, cheap Telegram bot servers, scalable Telegram hosting, high-speed bot hosting, Telegram bot server setup, Telegram bot hosting security, best hosting for Telegram bots, Telegram bot server management, Telegram bot hosting service, Telegram bot hosting site, top Telegram bot platforms, TBL Language, TeleBotHost, Telegram bots, bot development, TBL documentation, TBL tutorial, TeleBotHost guides, Telegram API, bot programming, tekegram bot api, hosting
+">
+
   <meta name="author" content="TeleBot Host">
   <meta name="robots" content="noindex, follow">
 
