--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Telegram bot hosting, free Telegram bot hosting, best Telegram bot hosting, secu
   <link rel="icon" type="image/png" sizes="16x16" href="https://telebothost.com/favicon-16x16.png">
   <link rel="manifest" href="https://telebothost.com/site.webmanifest">
   <meta name="msapplication-TileColor" content="#ffffff">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2719295794573158" crossorigin="anonymous"></script>
+    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2719295794573158" crossorigin="anonymous"></script> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -234,6 +234,7 @@ Telegram bot hosting, free Telegram bot hosting, best Telegram bot hosting, secu
             </div>
         </div>
     </section>
+  <!--
 <ins class="adsbygoogle"
      style="display:block; text-align:center;"
      data-ad-layout="in-article"
@@ -243,7 +244,7 @@ Telegram bot hosting, free Telegram bot hosting, best Telegram bot hosting, secu
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-
+-->
 <footer class="footer">
   <div class="footer-links">
     <a href="/privacy">Privacy</a>
