--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@ Telegram bot hosting, free Telegram bot hosting, best Telegram bot hosting, secu
   <link rel="manifest" href="https://telebothost.com/site.webmanifest">
   <meta name="msapplication-TileColor" content="#ffffff">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2719295794573158" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@300;400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css" type="text/css" media="all" />
 </head>
@@ -114,19 +114,31 @@ Telegram bot hosting, free Telegram bot hosting, best Telegram bot hosting, secu
                     
                     <ul class="intro-features">
                         <li class="intro-feature" data-aos="fade-right" data-aos-delay="100">
-                            <i class="fas fa-check-circle"></i>
+<svg class="intro-feature-icon" style="margin-right: 10px;" width="20" height="20" viewBox="0 0 24 24" fill="none">
+    <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z" 
+          fill="var(--success)"/>
+</svg>
                             <span>One-click deployment for your bots</span>
                         </li>
                         <li class="intro-feature" data-aos="fade-right" data-aos-delay="200">
-                            <i class="fas fa-check-circle"></i>
+<svg class="intro-feature-icon" style="margin-right: 10px;" width="20" height="20" viewBox="0 0 24 24" fill="none">
+    <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z" 
+          fill="var(--success)"/>
+</svg>
                             <span>Built-in TBL language with JavaScript syntax</span>
                         </li>
                         <li class="intro-feature" data-aos="fade-right" data-aos-delay="300">
-                            <i class="fas fa-check-circle"></i>
+<svg class="intro-feature-icon" style="margin-right: 10px;" width="20" height="20" viewBox="0 0 24 24" fill="none">
+    <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z" 
+          fill="var(--success)"/>
+</svg>
                             <span>24/7 reliable hosting with automatic scaling</span>
                         </li>
                         <li class="intro-feature" data-aos="fade-right" data-aos-delay="400">
-                            <i class="fas fa-check-circle"></i>
+<svg class="intro-feature-icon" style="margin-right: 10px;" width="20" height="20" viewBox="0 0 24 24" fill="none">
+    <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z" 
+          fill="var(--success)"/>
+</svg>
                             <span>Free tier with generous limits</span>
                         </li>
                     </ul>
