--- a/changelog/index.html
+++ b/changelog/index.html
@@ -43,7 +43,27 @@ Telegram bot hosting, free Telegram bot hosting, best Telegram bot hosting, secu
   <section>
     <h2>Changelog</h2>
     <p class="subtitle">See what's new and updated on TeleBot Host platform.</p>
-
+    
+<div id="v1-0-1" class="update-section">
+  <span class="update-date">October 17, 2025</span>
+  <h3>
+    Version 1.0.1
+    <i class="fas fa-link copy-link" onclick="copySectionLink('v1-0-0')"></i>
+  </h3>
+  <ul>
+    <li>Fixed Official Libraries Bugs</li>
+    <li>Faster Smooth Dashboard</li>
+    <li>10% Faster Bots</li>
+    <li></li>
+    <li>Security enhancements and stability improvements</li>
+    <li>Fixed bugs in TBL language</li>
+    <li>Added js native <b>Buffer</b> Support</li>
+    <li>Added New Methods on Bot Class</li>
+    <li>And Chaining method's on Api class</li>
+    <li>Added Webhook support to run command via http call</li>
+    <li>Added 200ms delay between upadtes to made your bot behaviour spam free and avoid flooding your bot</li>
+  </ul>
+</div>
 <!-- Official first Release with v1.0.0 -->
 <div id="v1-0-0" class="update-section">
   <span class="update-date">September 17, 2025</span>
