--- a/index.html
+++ b/index.html
@@ -221,11 +221,9 @@
                         TBL uses a familiar JavaScript syntax, making it easy for developers to start building Telegram bots without a steep learning curve. If you know JavaScript, you already know TBL!
                     </p>
                     
-                    <div class="bg-gray-900 text-gray-200 p-6 rounded-custom font-mono text-sm">
-                        <span class="text-purple-400">bot</span>.<span class="text-blue-400">command</span>(<span class="text-green-400">'start'</span>, <span class="text-yellow-400">async</span> (ctx) => {<br>
-                        &nbsp;&nbsp;<span class="text-blue-400">await</span> ctx.<span class="text-blue-400">reply</span>(<span class="text-green-400">'Welcome to my bot!'</span>);<br>
-                        });
-                    </div>
+<div class="bg-gray-900 text-gray-200 p-6 rounded-custom font-mono text-sm">
+    <span class="text-purple-400">Bot</span>.<span class="text-blue-400">sendMessage</span>(<span class="text-green-400">"Hello " </span> + <span class="text-yellow-400">user</span>.<span class="text-blue-400">first_name</span> + <span class="text-green-400">"! Welcome to my bot."</span>);
+</div>
                 </div>
                 
                 <div class="flex justify-center">
